Added samples for $stateParams, directives, and filters • Added a category view that illustrates how to use values from the route URL via $stateParams • Added a icon-panel directive that illustrates how to build a strongly-typed directives • Added the "thousand" filter that illustrates how to be a build a strongly-typed filter • Added the Cloud Sync settings view which illustrates how to use a directive and filter • Added initialize and destroy events to the BaseController

--- a/Sample-App/index.html
+++ b/Sample-App/index.html
@@ -51,6 +51,7 @@
         <!-- View Models -->
         <script src="app/ViewModels/EmptyViewModel.js"></script>
         <script src="app/ViewModels/MenuViewModel.js"></script>
+        <script src="app/ViewModels/CategoryViewModel.js"></script>
         <script src="app/ViewModels/CategoryItemViewModel.js"></script>
         <script src="app/ViewModels/Dialogs/ReorderCategoriesViewModel.js"></script>
         <script src="app/ViewModels/Dialogs/PinEntryViewModel.js"></script>
@@ -59,6 +60,7 @@
         <script src="app/ViewModels/Settings/ConfigurePinViewModel.js"></script>
         <script src="app/ViewModels/Settings/DeveloperViewModel.js"></script>
         <script src="app/ViewModels/Settings/SettingsListViewModel.js"></script>
+        <script src="app/ViewModels/Settings/CloudSyncViewModel.js"></script>
 
         <!-- Services -->
         <script src="app/Services/Utilities.js"></script>
@@ -71,10 +73,15 @@
 
         <!-- Directives -->
         <script src="app/Directives/BaseDirective.js"></script>
+        <script src="app/Directives/IconPanelDirective.js"></script>
+
+        <!-- Filters -->
+        <script src="app/Filters/ThousandsFilter.js"></script>
 
         <!-- Controllers -->
         <script src="app/Controllers/BaseController.js"></script>
         <script src="app/Controllers/MenuController.js"></script>
+        <script src="app/Controllers/CategoryController.js"></script>
         <script src="app/Controllers/Dialogs/ReorderCategoriesController.js"></script>
         <script src="app/Controllers/Dialogs/PinEntryController.js"></script>
         <script src="app/Controllers/Settings/SettingsListController.js"></script>
@@ -83,6 +90,7 @@
         <script src="app/Controllers/Settings/DeveloperController.js"></script>
         <script src="app/Controllers/Settings/AboutController.js"></script>
         <script src="app/Controllers/Settings/ConfigurePinController.js"></script>
+        <script src="app/Controllers/Settings/CloudSyncController.js"></script>
 
         <!-- Application Bootstrap -->
         <script src="app/Application.js"></script>
