More code clean-up and changes: • Added logging so client side routes are shown in the console on location change • Implemented the e-mail functionality from the log entry view • Added an explicit call to scope.$apply() to ensure the digest cycle completes (this helps with a few race conditions since initialize() is called in a defer) • Swept all controllers to use BaseController's initialize() method instead of having their initialization code in the constructor • Added a base controller for dialogs • Removed old helpers for dialogs and added a single showDialog helper for opening dialogs • Swept for references to toast, clipboard and progress indicator plug-ins that were using global references via the window variable; moved them to UiHelper which is better for unit testing

--- a/Sample-App/index.html
+++ b/Sample-App/index.html
@@ -46,7 +46,10 @@
 
         <!-- Models -->
         <script src="app/Models/Misc.js"></script>
-        <script src="app/Models/LogEntry.js"></script>
+        <script src="app/Models/Settings/LogEntry.js"></script>
+        <script src="app/Models/Dialogs/DialogOptions.js"></script>
+        <script src="app/Models/Dialogs/PinEntryDialogModel.js"></script>
+        <script src="app/Models/Dialogs/PinEntryDialogResultModel.js"></script>
 
         <!-- View Models -->
         <script src="app/ViewModels/EmptyViewModel.js"></script>
@@ -82,6 +85,7 @@
         <script src="app/Controllers/BaseController.js"></script>
         <script src="app/Controllers/MenuController.js"></script>
         <script src="app/Controllers/CategoryController.js"></script>
+        <script src="app/Controllers/Dialogs/BaseDialogController.js"></script>
         <script src="app/Controllers/Dialogs/ReorderCategoriesController.js"></script>
         <script src="app/Controllers/Dialogs/PinEntryController.js"></script>
         <script src="app/Controllers/Settings/SettingsListController.js"></script>
