More updates for CTP 3.1 and fixes for Windows Phone Universal apps
- Updated the sln and jsproj files to match several values that have been updated in the Cordova Tools CTP 3.1 release
- Updated targets to include "Windows Phone 8" and "Windows Phone (Universal)"
- Included winstore-jscompat.js to prevent an app crash for Windows Phone Universal apps
- Included a URL whitelist to fix hyperlink navigation for Windows Phone Universal apps

--- a/Sample-App/index.html
+++ b/Sample-App/index.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
         <title></title>
 
+        <!-- Include the platform specific compatibility code. -->
+        <script src="scripts/winstore-jscompat.js"></script>
+
         <!-- Exposes certain build flags (version, build time, debug, etc). -->
         <!-- This is created by the build scripts and will be a 404 during development. -->
         <script src="scripts/BuildVars.js"></script>
