Updated library versions to match sister project

--- a/Sample-App/www/index.html
+++ b/Sample-App/www/index.html
@@ -17,25 +17,22 @@
 
         <!-- *** Ionic Framework (includes AngularJs) **************************************** -->
 
-        <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-        <script src="lib/ionic/js/ionic.bundle.js"></script>
+        <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
+        <script src="lib/ionic/js/ionic.bundle.min.js"></script>
 
         <!-- Allows us to perform mocking in Angular (eg fake HTTP calls etc). -->
-        <script src="lib/angular-mocks.js"></script>
+        <script src="lib/angular-mocks/angular-mocks.js"></script>
 
         <!-- *** Cordova Library ************************************************************* -->
-
-        <!-- The ngCordova library exposes the Cordova API as Angular services. -->
-        <script src="lib/ng-cordova.js"></script>
 
         <!-- This will be a 404 during development; it is copied into package at build time. -->
         <script src="cordova.js"></script>
 
         <!-- *** Third Party Libraries ******************************************************* -->
 
-        <script src="lib/lodash.min.js"></script>
-        <script src="lib/moment.min.js"></script>
-        <script src="lib/URI.min.js"></script>
+        <script src="lib/lodash/lodash.js"></script>
+        <script src="lib/moment/moment.js"></script>
+        <script src="lib/uri.js/uri.min.js"></script>
         <link href="lib/nprogress/nprogress.css" rel="stylesheet" />
         <script src="lib/nprogress/nprogress.js"></script>
 
