--- a/Sample-App/www/index.html
+++ b/Sample-App/www/index.html
@@ -36,6 +36,7 @@
         <script src="lib/uri.js/uri.min.js"></script>
         <link href="lib/nprogress/nprogress.css" rel="stylesheet" />
         <script src="lib/nprogress/nprogress.js"></script>
+        <script src="lib/stacktrace/stacktrace.js"></script>
 
         <!-- *** Application Specific Dependencies ******************************************* -->
 
