--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 
         <!-- See: http://content-security-policy.com/ -->
-        <meta http-equiv="Content-Security-Policy" content="${CONTENT_SECURITY_POLICY}">
+        <!--<meta http-equiv="Content-Security-Policy" content="">-->
 
         <title></title>
 
